--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">PetFocus</string>
+    <string name="tekstEkranPowitalny">Witaj w PetFocus!!</string>
+    <string name="tekstTimerPomodoro">Minutnik Pomodoro</string>
+    <string name="tekstToDo">Lista to do:</string>
+    <string name="tekstZwierzak">Pora zadbać o zwierzaka:</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
